--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,9 @@ ul.timeline > li:before {
     height: 20px;
     z-index: 400;
 }
+
+html,body{
+        height:297mm;
+        width:210mm;
+        margin: 0 auto;
+    }
