--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,53 @@ ul.timeline > li:before {
     z-index: 400;
 }
 
-html,body{
-        height:297mm;
-        width:210mm;
-        margin: 0 auto;
+   body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #FAFAFA;
+        font: 12pt "Tahoma";
     }
+    * {
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+    }
+    .page {
+        width: 210mm; /*隨著紙張大小異動*/
+        min-height: 297mm;/*隨著紙張大小異動*/
+        padding: 10mm;
+        margin: 10mm auto;
+        border: 1px #D3D3D3 solid;
+        border-radius: 5px;
+        background: white;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
+    .subpage {
+        padding: 1cm;
+        border: 5px red solid;
+        height: 257mm;/*隨著紙張大小異動*/
+        outline: 2cm #FFEAEA solid;
+    }
+ 
+    @page {
+        size: A4;
+        margin: 0;
+    }
+    @media print {
+        html, body {
+            width: 210mm;/*隨著紙張大小異動*/
+            height: 297mm; /*隨著紙張大小異動*/
+        }
+        .page {
+            margin: 0;
+            border: initial;
+            border-radius: initial;
+            width: initial;
+            min-height: initial;
+            box-shadow: initial;
+            background: initial;
+            page-break-after: always;
+        }
+    }
+
